Revert "Upgrade bikemarket CorDapp to JDK17"
This reverts commit 58f43fc7b8395942db35af5540701a491b1894ef.