@@ -1,14 +1,10 @@
-import static org.gradle.api.JavaVersion.VERSION_17
-
 buildscript {
     Properties constants = new Properties()
     file("$projectDir/../constants.properties").withInputStream { constants.load(it) }
 
     ext {
         corda_release_group = constants.getProperty("cordaReleaseGroup")
-        corda_core_release_group =  constants.getProperty("cordaCoreReleaseGroup")
         corda_release_version = constants.getProperty("cordaVersion")
-        corda_core_release_version = constants.getProperty("cordaCoreVersion")
         corda_gradle_plugins_version = constants.getProperty("gradlePluginsVersion")
         junit_version = constants.getProperty("junitVersion")
         quasar_version = constants.getProperty("quasarVersion")
@@ -19,16 +15,10 @@ buildscript {
 
         //Tokens
         tokens_release_group = 'com.r3.corda.lib.tokens'
-        tokens_release_version = '1.3-RC02'
+        tokens_release_version = '1.2'
         confidential_id_release_group = "com.r3.corda.lib.ci"
-        confidential_id_release_version = "1.2-RC02"
+        confidential_id_release_version = "1.0"
 
-        test_add_opens = ['--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
-                          '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
-                          '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
-                          '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
-                          '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-                          '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',]
     }
 
     repositories {
@@ -53,7 +43,6 @@ allprojects {
 
         mavenCentral()
         maven { url 'https://download.corda.net/maven/corda-dependencies' }
-        maven { url 'https://download.corda.net/maven/corda-releases' }
         maven { url 'https://jitpack.io' }
         //SDK lib
         maven { url 'https://download.corda.net/maven/corda-lib' }
@@ -61,17 +50,12 @@ allprojects {
         maven { url 'https://repo.gradle.org/gradle/libs-releases' }
     }
 
-    java {
-        sourceCompatibility = VERSION_17
-        targetCompatibility = VERSION_17
-    }
-
-    compileJava {
-        options.compilerArgs << '-parameters'
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-parameters" // Required by Corda's serialisation framework.
     }
 
     dependencies {
-        implementation "com.google.guava:guava:$guava_version"
+        compile "com.google.guava:guava:$guava_version"
     }
 
     jar {
@@ -81,6 +65,9 @@ allprojects {
         duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     }
 }
+
+
+
 
 apply plugin: 'net.corda.plugins.cordapp'
 apply plugin: 'net.corda.plugins.cordformation'
@@ -95,33 +82,26 @@ sourceSets {
 }
 
 dependencies {
-    testImplementation "junit:junit:$junit_version"
+    testCompile "junit:junit:$junit_version"
 
     // Corda dependencies.
-    cordaProvided "$corda_release_group:corda-core:$corda_release_version"
-    cordaBootstrapper("$corda_release_group:corda-node-api:$corda_release_version") {
-        exclude group: "ch.qos.logback", module: "logback-classic"
-    }
-    corda "$corda_release_group:corda:$corda_release_version"
+    cordaCompile "$corda_release_group:corda-core:$corda_release_version"
+    cordaCompile "$corda_release_group:corda-node-api:$corda_release_version"
+    cordaRuntime "$corda_release_group:corda:$corda_release_version"
 
     // CorDapp dependencies.
     cordapp project(":workflows")
     cordapp project(":contracts")
 
     // For logging
-    cordaProvided "org.apache.logging.log4j:log4j-slf4j2-impl:${log4j_version}"
-    cordaProvided "org.apache.logging.log4j:log4j-web:${log4j_version}"
-    cordaProvided "org.slf4j:jul-to-slf4j:$slf4j_version"
-    cordaDriver "net.corda:corda-shell:$corda_release_version"
+    cordaCompile "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
+    cordaCompile "org.apache.logging.log4j:log4j-web:${log4j_version}"
+    cordaCompile "org.slf4j:jul-to-slf4j:$slf4j_version"
+    cordaDriver "net.corda:corda-shell:4.10"
 
     // Token SDK dependencies.
     cordapp "$tokens_release_group:tokens-contracts:$tokens_release_version"
     cordapp "$tokens_release_group:tokens-workflows:$tokens_release_version"
-}
-
-cordapp {
-    targetPlatformVersion corda_platform_version
-    minimumPlatformVersion corda_platform_version
 }
 
 task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
